k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yosegaki
  namespace: yosegaki
spec:
  selector:
    app: yosegaki
  ports:
    - name: http
      port: 3000
      targetPort: 3000
