k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yosegaki
  namespace: yosegaki
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: mydnschallenge
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - c.doany.io
  rules:
    - host: c.doany.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yosegaki
                port:
                  number: 3000
